# stm32-DS18B20

./: .gdb_history  .gdbinit  .gitignore  CMakeLists.txt  README.md  libopencm3.cmake  libopencm3.ld
cmake/: libopencm3.cmake  project.cmake  toolchain.cmake  warnings.cmake
examples/: CMakeLists.txt
src/: CMakeLists.txt  OneWire.c  OneWire.h  main.c  ow.c  ow.h
